Rename Zeros* classes to Zero* for consistency with ZeroPadding*
(cherry picked from commit ac3f028e98024650854b384d62fd06246046d2f7)

# Conflicts:
#	sigima/locale/fr/LC_MESSAGES/sigima.po

--- a/sigima/locale/fr/LC_MESSAGES/sigima.po
+++ b/sigima/locale/fr/LC_MESSAGES/sigima.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version:  sigima\n"
 "Report-Msgid-Bugs-To: p.raybaut@codra.fr\n"
-"POT-Creation-Date: 2025-10-15 10:29+0200\n"
+"POT-Creation-Date: 2025-10-11 11:30+0200\n"
 "PO-Revision-Date: 2025-05-22 15:46+0200\n"
 "Last-Translator: Christophe Debonnel <c.debonnel@codra.fr>\n"
 "Language: fr\n"
@@ -186,8 +186,8 @@ msgstr "Ecart-type de la distribution normale"
 msgid "Poisson distribution mean"
 msgstr "Moyenne de la distribution de Poisson"
 
-msgid "Zeros"
-msgstr "Zéros"
+msgid "Zero"
+msgstr "Zéro"
 
 msgid "Normal distribution"
 msgstr "Moyenne de la distribution normale"
