Rename Sinus and Cosinus to Sine and Cosine across the codebase for consistency

--- a/sigima/locale/fr/LC_MESSAGES/sigima.po
+++ b/sigima/locale/fr/LC_MESSAGES/sigima.po
@@ -361,10 +361,10 @@ msgstr "Voigt"
 msgid "Blackbody (Planck)"
 msgstr "Corps noir (Planck)"
 
-msgid "Sinus"
+msgid "Sine"
 msgstr "Sinus"
 
-msgid "Cosinus"
+msgid "Cosine"
 msgstr "Cosinus"
 
 msgid "Sawtooth"
