docs: Add grid navigation to Getting started page

--- a/doc/locale/fr/LC_MESSAGES/requirements.po
+++ b/doc/locale/fr/LC_MESSAGES/requirements.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Sigima \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-10-19 10:34+0200\n"
+"POT-Creation-Date: 2025-10-26 11:58+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: fr\n"
@@ -220,6 +220,12 @@ msgstr ""
 msgid "Bootstrap-based Sphinx theme from the PyData community"
 msgstr "Thème Sphinx basé sur Bootstrap de la communauté PyData"
 
+msgid "sphinx-gallery"
+msgstr ""
+
+msgid "A Sphinx extension that builds an HTML gallery of examples from any set of Python scripts."
+msgstr "Une extension Sphinx qui crée une galerie HTML d'exemples à partir de n'importe quel ensemble de scripts Python."
+
 msgid "Optional modules for running test suite:"
 msgstr "Modules facultatifs pour exécuter la suite de tests :"
 
@@ -234,4 +240,3 @@ msgstr ""
 
 msgid "A pytest plugin to run Xvfb (or Xephyr/Xvnc) for tests."
 msgstr "Un plugin pytest pour exécuter Xvfb (ou Xephyr/Xvnc) pour les tests."
-
