Doc examples: shorter titles and first intro sentence

--- a/doc/locale/fr/LC_MESSAGES/auto_examples/advanced/coordinate_systems.po
+++ b/doc/locale/fr/LC_MESSAGES/auto_examples/advanced/coordinate_systems.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Sigima \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-10-24 21:29+0200\n"
+"POT-Creation-Date: 2025-10-27 15:52+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: fr\n"
@@ -22,8 +22,8 @@ msgstr ""
 msgid ":ref:`Go to the end <sphx_glr_download_auto_examples_advanced_coordinate_systems.py>` to download the full example code."
 msgstr ":ref:`Aller à la fin <sphx_glr_download_auto_examples_advanced_coordinate_systems.py>` pour télécharger le code complet de l'exemple."
 
-msgid "Uniform and Non-Uniform Coordinate Systems with Sigima"
-msgstr "Systèmes de coordonnées uniformes et non uniformes avec Sigima"
+msgid "Uniform and Non-Uniform Coordinate Systems"
+msgstr "Systèmes de coordonnées uniformes et non uniformes"
 
 msgid "This example demonstrates the use of uniform and non-uniform coordinate systems with images in Sigima. It shows how to create, visualize, and work with both types of coordinate systems, highlighting their differences and appropriate use cases."
 msgstr "Cet exemple démontre l'utilisation de systèmes de coordonnées uniformes et non uniformes avec des images dans Sigima. Il montre comment créer, visualiser et travailler avec les deux types de systèmes de coordonnées, en mettant en évidence leurs différences et leurs cas d'utilisation appropriés."
