--- a/doc/locale/fr/LC_MESSAGES/auto_examples/advanced/datetime_signals.po
+++ b/doc/locale/fr/LC_MESSAGES/auto_examples/advanced/datetime_signals.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Sigima \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-10-24 21:29+0200\n"
+"POT-Creation-Date: 2025-10-27 15:52+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: fr\n"
@@ -22,8 +22,8 @@ msgstr ""
 msgid ":ref:`Go to the end <sphx_glr_download_auto_examples_advanced_datetime_signals.py>` to download the full example code."
 msgstr ":ref:`Aller à la fin <sphx_glr_download_auto_examples_advanced_datetime_signals.py>` pour télécharger le code complet de l'exemple."
 
-msgid "DateTime Signal Processing with Sigima"
-msgstr "Traitement des signaux DateTime avec Sigima"
+msgid "DateTime Signal Processing"
+msgstr "Traitement des signaux DateTime"
 
 msgid "This example demonstrates how to work with signals that have datetime X-axis data in Sigima. DateTime support is essential for time-series analysis where you need to preserve human-readable timestamps while performing signal processing."
 msgstr "Cet exemple démontre comment travailler avec des signaux ayant des données d'axe X de type datetime dans Sigima. Le support de DateTime est essentiel pour l'analyse des séries temporelles où vous devez préserver des horodatages lisibles par l'homme tout en effectuant un traitement de signal."
