--- a/doc/locale/fr/LC_MESSAGES/auto_examples/image_creation.po
+++ b/doc/locale/fr/LC_MESSAGES/auto_examples/image_creation.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Sigima \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-10-27 15:25+0100\n"
+"POT-Creation-Date: 2025-10-27 15:49+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: fr\n"
@@ -22,11 +22,14 @@ msgstr ""
 msgid ":ref:`Go to the end <sphx_glr_download_auto_examples_image_creation.py>` to download the full example code."
 msgstr ":ref:`Aller à la fin <sphx_glr_download_auto_examples_image_creation.py>` pour télécharger le code complet de l'exemple."
 
-msgid "Creating Images in Sigima"
-msgstr "Création d'images dans Sigima"
+msgid "Creating Images"
+msgstr "Création d'Images"
 
-msgid "This example demonstrates the three main approaches for creating images in Sigima:"
-msgstr "Cet exemple illustre les trois principales approches pour créer des images dans Sigima :"
+msgid "This example focuses on creating 2D image objects in Sigima."
+msgstr "Cet exemple se concentre sur la création d'objets image 2D dans Sigima."
+
+msgid "There are three primary methods to create images in Sigima:"
+msgstr "Il existe trois méthodes principales pour créer des images dans Sigima :"
 
 msgid "**Synthetic data generation**: Using built-in parameter classes to create standard"
 msgstr "**Génération de données synthétiques** : Utilisation des classes de paramètres intégrées pour créer des types d'images standard"
